# fao-models

./: .gitignore  AUTHORS.rst  LICENSE  README.md  dev-predict-runc-mobilenetv3small_batch64.yml  dev-predict-runc-resnet-jjd.yml  environment-20250122.yml  mkdocs.yml  mobilenet_v3small_kdw_v4_test_valsplit.yml  pyproject.toml  requirements-20250122.txt  requirements.txt  requirements_change_detection.txt  requirements_change_detection_test1.txt  runc-mobilenetv3small-epochs10-batch32-lr01.yml  runc-mobilenetv3small-epochs10-batch32-lr01_testPredict.yml  runc-mobilenetv3small-epochs30-batch64-lr001_testPredict.yml  runc-mobilenetv3small-kdw_v1.yml  runc-mobilenetv3small-kdw_v2.yml  runc-mobilenetv3small-kdw_v3.yml  runc-mobilenetv3small-kdw_v4.yml  runc-resnet-diceloss-jjd.yml  runc-resnet-epochs10-batch32-lr001.yml  runc-resnet-epochs10-batch32-lr01.yml  runc-resnet-epochs10-batch64-lr001-seed5-lrdecay5-tfrecords-all.yml  runc-resnet-epochs10-batch64-lr001-seed5.yml  runc-resnet-epochs10-batch64-lr001.yml  runc-resnet-epochs15-batch64-lr001-seed5-lrdecay5.yml  runc-resnet-epochs30-batch64-lr001-seed5-lrdecay2_5.yml  runc-resnet-epochs30-batch64-lr001-seed5-lrdecay5.yml  runc-resnet-epochs5-batch64-lr001-seed42.yml  runc-resnet-epochs5-batch64-lr001-seed5-lrdecay5-rerun-afterdatadownload.yml  runc-resnet-epochs5-batch64-lr001-seed5-lrdecay5-tfrecords-all.yml  runc-resnet-epochs5-batch64-lr001-seed5-reshuffledEachIter.yml  runc-resnet-epochs5-batch64-lr001_testingBugFix.yml  runc-resnet-jjd.yml  runc1_kdw.yml  runc2_kdw.yml  runc3.yml  runc3_kdw.yml  (+3 more)
_config/: runc-mobilenetv3small-epochs10-batch32-lr001.yml  runc-mobilenetv3small-epochs10-batch64-lr001.yml  runc-mobilenetv3small-epochs10-batch64-lr01.yml  runc-mobilenetv3small-epochs30-batch64-lr001.yml  runc-resnet-epochs10-batch32-lr01.yml  (+5 more)
(+93 files in other folders)
